<resources>

    <string name="app_name">Time Zone Converter</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_time_zone">Add Time Zone</string>
    <string name="menu_help">Help</string>

    <string name="title_activity_main">Time Zone Converter</string>
    <string name="add">Add time zone</string>
    <string name="refresh">Refresh time</string>
    <string name="search">Search time zone</string>
    <string name="title_activity_search">Add new time zone</string>
    <string name="add_content_description">Add</string>
    <string name="time_image">time image</string>
    <string name="empty_view">No Timezones to display. Please search and timezones</string>
    <string name="title_activity_help">Help</string>

    <string name="text_current_zone">Local time zone</string>
    <string name="text_list_zones">Time zones</string>
    <string name="text_minute">30</string>

    <string name="time_display">10:30</string>
    <string name="country">India</string>
    <string name="city">Hyderabad</string>
     <string name="date">10 Wed 2012</string>

     <string name="select_city">Select City</string>
     <string name="deafult_city_value">Paris</string>
     <string name="button_ok_on_click">OK</string>
     <string name="ampm">AM</string>


    <string name="help">
        <b>Time Zone Convertor</b>\n\n
        <b>Add new time zone:</b>\n\n
        Go to menu to add time zone.\n
(Action bar)Click on the add new time zone icon on the right top of the application.\n
Search and select time zone to add.\n\n
<b>Delete time zone:</b>\n\n
Click on a time zone to remove it from the list.\n\n
<b>Edit time zone:</b>\n\n
What is the time in New York when it is 9:00 am in Paris?\n
Click on a time zone to edit timezone.\n\n
<b>Widget Help:</b>\n\n
Go to widget launcher.\n
Select Time zone converter Widget.\n
Select a city to display time in widget.\n\n\n
What is the time in New York when it is 9:00 am in Paris?\n
Click on a time zone to edit timezone.\n\n
</string>
    <string name="more_apps">More Apps</string>
    <string name="delete">delete</string>
    <string name="edit_time">edit time</string>

</resources>