<?xml version="1.0" encoding="utf-8"?>
<com.agiliq.timezoneconverter.core.CustomClockLinear xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customClockLinear"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/customClockView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="3dp" >

        <LinearLayout
            android:id="@+id/leftLayout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/text_color"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightLayout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="9.5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/timeDisplay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_display"
                        android:textColor="@color/text_color"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/am_pm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/timeImage"
                    android:layout_width="18dp"
                    android:layout_height="20dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/time_image"
                    android:src="@drawable/sun"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/date"
                android:textColor="@color/text_color" />
        </LinearLayout>
    </LinearLayout>

    <SeekBar
        android:id="@+id/time_switcher_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ruler"
        android:paddingBottom="8dp"
        android:max="23" />

</com.agiliq.timezoneconverter.core.CustomClockLinear>